# connect4-ai

./: .coveragerc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testaus.md  toteutusdokumentti.md  viikkoraportti 1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.mid
src/: ai.py  app.py  board.py  event_queue.py  game_controller.py
src/tests/: ai_test.py  game_board_test.py  game_control_test.py
