[tool.poetry]
name = "connect4-ai"
version = "0.1.0"
description = ""
authors = ["erz64 <eeroranta111@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"
pytest = "^7.2.2"
coverage = "^7.2.2"
pylint = "^2.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
